<resources>
    <string name="app_name">SmallTools</string>
    <string name="call_log_count">插入通话记录数</string>
    <string name="call_log_type">通话记录类型</string>
    <string name="call_out">拨出</string>
    <string name="call_in">拨入</string>
    <string name="call_receive">已接</string>
    <string name="call_unreceive">未接</string>
    <string name="call_log_number">号码</string>
    <string name="insert_call_log">插入通话记录</string>
    <string name="about">关于</string>
    <string name="current_activity">当前Activity</string>
    <string name="device_info">本机信息</string>
    <string name="float_window">显示悬浮窗</string>
    <string name="accessibility_service">无障碍服务</string>
    <string name="accessibility_note">2. 打开无障碍服务\n\n    SmallTools 通过无障碍服务来获取当前的 Activity 名称。开启无障碍服务需要您的手动确认，SmallTools 保证不会收集任何信息。请在系统弹出的 无障碍 选项中找到 SmallTools，并打开无障碍开关。</string>
    <string name="floatwindow_note">1. 打开悬浮窗\n\n    SmallTools 将在悬浮窗中显示当前 Activity 名称。首次开启悬浮窗，系统将询问 SmallTools 是否可在其他应用上层显示，请打开该选项。\n上面的 显示悬浮窗 开关可以控制悬浮窗的显示和关闭。\n悬浮窗可以拖动到任意位置。</string>
    <string name="accessibility_service_description">开启无障碍服务以查看当前 Activity</string>
    <string name="sdk_version">Sdk Version :</string>
    <string name="version">App Version :</string>
    <string name="device_ifo">设备信息</string>
    <string name="brand">品牌</string>
    <string name="display">版本号</string>
    <string name="product">型号</string>
    <string name="device">设备名称</string>
    <string name="board">主板</string>
    <string name="model">Model</string>
    <string name="manufacturer">制造商</string>
    <string name="bootloader">Bootloader</string>
    <string name="hardware">Hardware</string>
    <string name="abis">ABIs</string>
    <string name="radio_version">Radio</string>
    <string name="api">Api</string>
    <string name="android_version">Android 版本</string>
    <string name="sdk">SDK 版本</string>
    <string name="os_version">Base Os</string>
    <string name="kernel_version">Kernel</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="sn">SN</string>
    <string name="mac_address">Mac Address</string>
    <string name="screen">屏幕</string>
    <string name="ram">内存</string>
    <string name="rom">存储</string>
    <string name="is_reversing_please_wait">正在反编译，请稍候...</string>
</resources>
